Resolves: tdf#111925 we need to take the buffered data len into account

Change-Id: I8aee1f17e6ec1042e7b67942e5bcad0bb3bbf840