vcl/source/filter/ixpm/xpmread.cxx
@@ -162,7 +162,7 @@ ReadState XPMReader::ReadXPM( Graphic& rGraphic )
                 mbStatus = false;
             //xpms are a minimum of one character (one byte) per pixel, so if the file isn't
             //even that long, it's not all there
-            if (mrIStm.remainingSize() < static_cast<sal_uInt64>(mnWidth) * mnHeight)
+            if (mrIStm.remainingSize() + mnTempAvail < static_cast<sal_uInt64>(mnWidth) * mnHeight)
                 mbStatus = false;
             if ( mbStatus && mnWidth && mnHeight && mnColors && mnCpp )
             {
